--- a/main.html
+++ b/main.html
@@ -30,6 +30,8 @@
 
 /* Two columns code above */
 
+/* Nav bar below */
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -83,15 +85,17 @@ body {
     border: 1px solid #ccc;  
   }
 }
+
+/* Nav bar above */
+
 </style>
 </head>
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
-  <input type="text" placeholder="Search..">
+  <a class="active" href="main.html">Home</a>
+  <a href="leave.html">About</a>
+  <a href="inventory.html">Inventory</a>
 </div>
 
 <!-- top of two columns -->
