--- a/leave.html
+++ b/leave.html
@@ -6,6 +6,8 @@
   box-sizing: border-box;
 }
 
+/* Leave form below */
+
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -65,9 +67,76 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+
+/* Leave form above */
+
+/* Nav bar below */
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  border: none;
+  font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+
+/* Nav bar above */
+
 </style>
 </head>
 <body>
+
+<div class="topnav">
+    <a class="active" href="main.html">Home</a>
+    <a href="leave.html">About</a>
+    <a href="inventory.html">Inventory</a>
+</div>
 
 <h2>Responsive Form</h2>
 <p>Resize the browser window to see the effect. When the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other.</p>
