--- a/main.html
+++ b/main.html
@@ -96,6 +96,7 @@ body {
   <a class="active" href="main.html">Home</a>
   <a href="leave.html">About</a>
   <a href="inventory.html">Inventory</a>
+  <input type="text" placeholder="Search..">
 </div>
 
 <!-- top of two columns -->
