--- a/leave.html
+++ b/leave.html
@@ -138,8 +138,8 @@ body {
     <a href="inventory.html">Inventory</a>
 </div>
 
-<h2>Responsive Form</h2>
-<p>Resize the browser window to see the effect. When the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other.</p>
+<h2>Contact Form</h2>
+<p>If there is any information you wish to know please fill out the form below.</p>
 
 <div class="container">
   <form action="/action_page.php">
