--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@ body {
 
 <div class="topnav">
   <a class="active" href="main.html">Home</a>
-  <a href="leave.html">About</a>
+  <a href="leave.html">Contact</a>
   <a href="inventory.html">Inventory</a>
   <input type="text" placeholder="Search..">
 </div>
@@ -105,6 +105,99 @@ body {
   <div class="column left" style="background-color:#aaa;">
     <h2>Witcher 3 Inventory</h2>
     <p>Welcome to our website. Please choose your items.</p>
+    <?php
+        $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
+        $resultSet = $mysqli - query("SELECT product_name FROM Armor");
+    ?>
+    <select name="product_name">
+    <?php
+        while($row = $resultSet->fetch_assoc())
+        {
+	        product_name = $rows['product_name'];
+	        echo "<option value='product_name'>Select Product</option>";
+        {
+    ?>
+    </select>
+    <br />
+    <br />
+    <br />
+    <?php
+        $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
+        $resultSet = $mysqli - query("SELECT product_name FROM Armor");
+    ?>
+    <select name="product_name">
+    <?php
+        while($row = $resultSet->fetch_assoc())
+        {
+	        product_name = $rows['product_name'];
+	        echo "<option value='product_name'>Select Product</option>";
+        {
+    ?>
+    </select>
+    <br />
+    <br />
+    <br />
+    <?php
+        $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
+        $resultSet = $mysqli - query("SELECT product_name FROM Armor");
+    ?>
+    <select name="product_name">
+    <?php
+        while($row = $resultSet->fetch_assoc())
+        {
+	        product_name = $rows['product_name'];
+	        echo "<option value='product_name'>Select Product</option>";
+        {
+    ?>
+    </select>
+    <br />
+    <br />
+    <br />
+    <?php
+        $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
+        $resultSet = $mysqli - query("SELECT product_name FROM Armor");
+    ?>
+    <select name="product_name">
+    <?php
+        while($row = $resultSet->fetch_assoc())
+        {
+	        product_name = $rows['product_name'];
+	        echo "<option value='product_name'>Select Product</option>";
+        {
+    ?>
+    </select>
+    <br />
+    <br />
+    <br />
+    <?php
+        $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
+        $resultSet = $mysqli - query("SELECT product_name FROM Armor");
+    ?>
+    <select name="product_name">
+    <?php
+        while($row = $resultSet->fetch_assoc())
+        {
+	        product_name = $rows['product_name'];
+	        echo "<option value='product_name'>Select Product</option>";
+        {
+    ?>
+    </select>
+    <br />
+    <br />
+    <br />
+    <?php
+        $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
+        $resultSet = $mysqli - query("SELECT product_name FROM Armor");
+    ?>
+    <select name="product_name">
+    <?php
+        while($row = $resultSet->fetch_assoc())
+        {
+	        product_name = $rows['product_name'];
+	        echo "<option value='product_name'>Select Product</option>";
+        {
+    ?>
+    </select>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Database Inventory</h2>
