--- a/main.html
+++ b/main.html
@@ -114,7 +114,7 @@ body {
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Product</option>";
+	        echo "<option value='product_name'>Select Armor</option>";
         {
     ?>
     </select>
@@ -130,7 +130,7 @@ body {
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Product</option>";
+	        echo "<option value='product_name'>Select Weapon</option>";
         {
     ?>
     </select>
@@ -146,7 +146,7 @@ body {
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Product</option>";
+	        echo "<option value='product_name'>Select Quest Item</option>";
         {
     ?>
     </select>
@@ -162,7 +162,7 @@ body {
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Product</option>";
+	        echo "<option value='product_name'>Select Trophy</option>";
         {
     ?>
     </select>
@@ -178,7 +178,7 @@ body {
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Product</option>";
+	        echo "<option value='product_name'>Select Crafting Component</option>";
         {
     ?>
     </select>
