--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@ body {
 
 <div class="topnav">
     <a class="active" href="main.html">Home</a>
-    <a href="leave.html">About</a>
+    <a href="contact.html">Contact</a>
     <a href="inventory.html">Inventory</a>
 </div>
 
@@ -187,3 +187,30 @@ body {
 
 </body>
 </html>
+
+
+<html>    
+    <head>    
+        <title>Registration Form</title>    
+    </head>    
+    <body>    
+        <link href = "registration.css" type = "text/css" rel = "stylesheet" />    
+        <h2>Sign Up</h2>    
+        <form name = "form1" action="modified.php" method = "post" enctype = "multipart/form-data" >    
+            <div class = "container">    
+                <div class = "form_group">    
+                    <label>First Name:</label>    
+                    <input type = "text" name = "fname" value = "" required/>    
+                </div>       
+                <div class = "form_group">    
+                    <label>Last Name:</label>    
+                    <input type = "text" name = "lname" value = "" required/>    
+                </div>    
+                <div class = "form_group">    
+                    <label>Age:</label>    
+                    <input type = "number" name = "age" value = "" required />    
+                </div> 
+            </div>    
+        </form>    
+    </body>    
+</html>    
