--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@ body {
 
 <div class="topnav">
   <a class="active" href="main.html">Home</a>
-  <a href="leave.html">Contact</a>
+  <a href="contact.html">Contact</a>
   <a href="inventory.html">Inventory</a>
   <input type="text" placeholder="Search..">
 </div>
@@ -198,10 +198,36 @@ body {
         {
     ?>
     </select>
+    <br />
+    <p align="right">
+        <button type="button">Add</button>
+    </p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Database Inventory</h2>
     <p>Some text..</p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <p align="right">
+        <button type="button">Update</button>
+    </p>
+    <p align="right">
+        <button type="button">Delete</button>
+    </p>
   </div>
 </div>
 
