--- a/inventory.html
+++ b/inventory.html
@@ -99,26 +99,33 @@ body {
     <h3>Armor:</h3>
     <p>Angrbenian Cuirass</p>
     <p>Enhanced Legendary Feline Armor</p>
+    <p>Griffin Armor</p>
 
     <h3>Weapons:</h3>
     <p>Battle Axe</p>
     <p>Cross Bow</p>
+    <p>Heavy Mace</p>
+
 
     <h3>Quest Items:</h3>
     <p>Albino Bruxa Tongue</p>
     <p>Agate</p>
+    <p>Bird Mask</p>
 
     <h3>Trophies:</h3>
     <p>Ekhidna Trophy</p>
     <p>Griffin Trophy</p>
+    <p>Leshen Trophy</p>
 
     <h3>Alchemy Ingredients:</h3>
     <p>Angrbenian Cuirass</p>
     <p>Enhanced Legendary Feline Armor</p>
+    <p>Leshen Resin</p>
 
     <h3>Crafting Components:</h3>
     <p>Black Pearl</p>
     <p>Diamond</p>
+    <p>Dragon Scales</p>
   </div>
 </div>
 
