--- a/main.html
+++ b/main.html
@@ -109,12 +109,15 @@ body {
         $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
         $resultSet = $mysqli - query("SELECT product_name FROM Armor");
     ?>
-    <select name="product_name">
+    <select id="armor">
     <?php
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Armor</option>";
+	        echo "<option value='Please select an option for Armor'>Select Armor</option>";
+            echo "<option value='Angrbenian Cuirass'>Angrbenian Cuirass</option>";
+            echo "<option value='Enhanced Legendary Feline'>Enhanced Legendary Feline</option>";
+            echo "<option value='Griffin Armor'>Griffin Armor</option>";
         {
     ?>
     </select>
@@ -125,12 +128,15 @@ body {
         $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
         $resultSet = $mysqli - query("SELECT product_name FROM Armor");
     ?>
-    <select name="product_name">
+    <select id="weapons">
     <?php
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Weapon</option>";
+	        echo "<option value='Please select an option for Weapon'>Select Weapon</option>";
+            echo "<option value='Battle Axe'>Battle Axe</option>";
+            echo "<option value='CrossBow'>CrossBow</option>";
+            echo "<option value='Heavy Mace'>Heavy Mace</option>";
         {
     ?>
     </select>
@@ -141,12 +147,15 @@ body {
         $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
         $resultSet = $mysqli - query("SELECT product_name FROM Armor");
     ?>
-    <select name="product_name">
+    <select id="quests">
     <?php
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Quest Item</option>";
+	        echo "<option value='Please select an option for Quest Item'>Select Quest Item</option>";
+            echo "<option value='Albino Bruxa Tongue'>Albino Bruxa Tongue</option>";
+            echo "<option value='Agate'>Agate</option>";
+            echo "<option value='Bird Mask'>Bird Mask</option>";
         {
     ?>
     </select>
@@ -157,12 +166,15 @@ body {
         $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
         $resultSet = $mysqli - query("SELECT product_name FROM Armor");
     ?>
-    <select name="product_name">
+    <select id="trophies">
     <?php
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Trophy</option>";
+	        echo "<option value='Please select an option for Trophy'>Select Trophy</option>";
+            echo "<option value='Ekhidna'>Ekhidna</option>";
+            echo "<option value='Griffin'>Griffin</option>";
+            echo "<option value='Leshen'>Leshen</option>";
         {
     ?>
     </select>
@@ -173,12 +185,15 @@ body {
         $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
         $resultSet = $mysqli - query("SELECT product_name FROM Armor");
     ?>
-    <select name="product_name">
+    <select id="alchemy">
     <?php
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Crafting Component</option>";
+	        echo "<option value='Please select an option for Alchemy Ingredients'>Select Alchemy Ingredients</option>";
+            echo "<option value='Arachas Eyes'>Arachas Eyes</option>";
+            echo "<option value='Chort Hide'>Chort Hide</option>";
+            echo "<option value='Leshen Resin'>Leshen Resin</option>";
         {
     ?>
     </select>
@@ -189,39 +204,95 @@ body {
         $mysqli = NEW MYSQLi("localhost", "root", "", "sampleDB");
         $resultSet = $mysqli - query("SELECT product_name FROM Armor");
     ?>
-    <select name="product_name">
+    <select id="crafting">
     <?php
         while($row = $resultSet->fetch_assoc())
         {
 	        product_name = $rows['product_name'];
-	        echo "<option value='product_name'>Select Product</option>";
+	        echo "<option value='Please select an option for Crafting Components'>Select Crafting Components</option>";
+            echo "<option value='Black Pearl'>Black Pearl</option>";
+            echo "<option value='Diamond'>Diamond</option>";
+            echo "<option value='Dragon Scales'>Dragon Scales</option>";
         {
     ?>
     </select>
+    <br />
     <br />
     <p align="right">
-        <button type="button">Add</button>
+        <button onclick="getOption()">Add</button>
+ 
     </p>
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Database Inventory</h2>
-    <p>Some text..</p>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+    <p> 
+        Added Items:
+        <br />
+        <br />
+        <br />
+        <b>Armor:</b><span class="armor"></span>
+        <br />
+        <br />
+        <br />
+        <b>Weapon:</b> <span class="weapons"></span>
+        <br />
+        <br />
+        <br />
+        <b>Quest Item:</b> <span class="quests"></span>
+        <br />
+        <br />
+        <br />
+        <b>Trophy:</b> <span class="trophies"></span>
+        <br />
+        <br />
+        <br />
+        <b>Alchemy Ingredient:</b> <span class="alchemy"></span>
+        <br />
+        <br />
+        <br />
+        <b>Crafting Component:</b><span class="crafting"></span>
+        <br />
+    </p> 
+      
+    <script type="text/javascript"> 
+        function getOption() { 
+            selectArmor =  
+                    document.querySelector('#armor'); 
+            armor = selectArmor.value; 
+            document.querySelector('.armor').textContent 
+                    = armor;
+            
+            selectWeapon =  
+                    document.querySelector('#weapons'); 
+            weapons = selectWeapon.value; 
+            document.querySelector('.weapons').textContent 
+                    = weapons;
+
+            selectQuest =  
+                    document.querySelector('#quests'); 
+            quests = selectQuest.value; 
+            document.querySelector('.quests').textContent 
+                    = quests;
+
+            selectTrophy =  
+                    document.querySelector('#trophies'); 
+            trophy = selectTrophy.value; 
+            document.querySelector('.trophies').textContent 
+                    = trophy;
+
+            selectAlchemy =  
+                    document.querySelector('#alchemy'); 
+            alchemy = selectAlchemy.value; 
+            document.querySelector('.alchemy').textContent 
+                    = alchemy;
+
+            selectCrafting =  
+                    document.querySelector('#crafting'); 
+            crafting = selectCrafting.value; 
+            document.querySelector('.crafting').textContent 
+                    = crafting;
+        } 
+    </script>
     <p align="right">
         <button type="button">Update</button>
     </p>
